# datasette-kindle-highlights

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  Justfile  README.md  Tiltfile  metadata.json  requirements.txt  sqlx-data.json
.github/workflows/: clippy.yml  docker.yml  rust.yml
k8s/: Dockerfile  app.yaml
migrations/: 20201227_highlights.sql
plugins/: index_vars.py  redirects.py
src/: lib.rs  main.rs
templates/: _book_card.html  index.html  query-highlights-search.html
templates/pages/: {id}.html
