[package]
name = "kindle_highlights"
version = "0.1.0"
authors = ["Ryan Phillips <ryan@trolocsis.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
async-std = { version = "1.8", features = ["attributes"] }
serde = "1.0"
serde_json = "1.0"
sqlx = { version = "0.4", features = ["sqlite", "runtime-async-std-native-tls"] }
structopt = "0.3"