[package]
name = "kindle_highlights"
version = "0.1.1dev"
authors = ["Ryan Phillips <ryan@trolocsis.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
rusqlite = { version = "0.24.2", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
