[package]
name = "kindle_highlights"
version = "0.3.1"
authors = ["Ryan Phillips <ryan@trolocsis.com>"]
license = "Apache-2.0"
description = "Convert Bookcision Kindle highlight exports to SQLite."
edition = "2018"

[dependencies]
anyhow = "1.0"
rusqlite = { version = "0.24", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
